--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,19 +4,111 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/result"
     tools:context=".activities.MainActivity">
 
     <TextView
         android:id="@+id/distance"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Километры: 0.00"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="14dp"
+        android:text="0.00"
+        android:textColor="#FFFFFF"
         android:textSize="24sp"
+        app:layout_constraintStart_toStartOf="@+id/textRes"
+        app:layout_constraintTop_toBottomOf="@+id/textRes" />
+
+    <TextView
+        android:id="@+id/textMain"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="38dp"
+        android:layout_marginEnd="4dp"
+        android:text="Выберите период"
+        android:textColor="#FFFFFF"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="@+id/action_bar_spinner"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Spinner
+        android:id="@+id/action_bar_spinner"
+        style="@android:style/Widget.Material.Spinner.Underlined"
+        android:layout_width="0dp"
+        android:layout_height="96dp"
+        android:layout_marginStart="23dp"
+        android:layout_marginEnd="24dp"
+        android:entries="@array/interval"
+        android:textAlignment="center"
+        app:layout_constraintEnd_toEndOf="@+id/textRes"
+        app:layout_constraintStart_toStartOf="@+id/headlineDate"
+        app:layout_constraintTop_toBottomOf="@+id/textMain" />
+
+    <TextView
+        android:id="@+id/headlineDate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="96dp"
+        android:layout_marginTop="55dp"
+        android:text="Дата"
+        android:textColor="#FFFFFF"
+        android:textSize="18sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/action_bar_spinner" />
+
+    <TextView
+        android:id="@+id/textRes"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="55dp"
+        android:layout_marginEnd="75dp"
+        android:text="Результат"
+        android:textColor="#FFFFFF"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/action_bar_spinner" />
+
+    <Button
+        android:id="@+id/setButton"
+        android:layout_width="0dp"
+        android:layout_height="49dp"
+        android:layout_marginEnd="40dp"
+        android:background="@drawable/iconsettingss"
+        android:onClick="onClick"
+        app:layout_constraintBaseline_toBaselineOf="@+id/btnProfile"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/btnProfile" />
+
+    <Button
+        android:id="@+id/btnMainScreen"
+        android:layout_width="0dp"
+        android:layout_height="49dp"
+        android:layout_marginStart="56dp"
+        android:layout_marginEnd="20dp"
+        android:background="@drawable/iconhome"
+        app:layout_constraintBaseline_toBaselineOf="@+id/btnResultat"
+        app:layout_constraintEnd_toStartOf="@+id/btnResultat"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/btnResultat"
+        android:layout_width="0dp"
+        android:layout_height="49dp"
+        android:layout_marginEnd="19dp"
+        android:background="@drawable/iconresultat"
+        app:layout_constraintBaseline_toBaselineOf="@+id/btnProfile"
+        app:layout_constraintEnd_toStartOf="@+id/btnProfile"
+        app:layout_constraintStart_toEndOf="@+id/btnMainScreen" />
+
+    <Button
+        android:id="@+id/btnProfile"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="24dp"
+        android:layout_marginBottom="83dp"
+        android:background="@drawable/iconprofile"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.06" />
+        app:layout_constraintEnd_toStartOf="@+id/setButton"
+        app:layout_constraintStart_toEndOf="@+id/btnResultat" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
