--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -7,11 +7,27 @@
     android:background="@drawable/profile"
     tools:context=".activities.profileActivity">
 
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:background="#0000"
+        android:elevation="4dp"
+        android:minHeight="?attr/actionBarSize"
+        android:paddingTop="@dimen/tool_bar_top_padding"
+        android:transitionName="actionBar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:title="Профиль" />
+
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="0dp"
-        android:layout_height="321dp"
-        android:layout_marginTop="16dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="68dp"
+        android:layout_marginBottom="53dp"
+        app:layout_constraintBottom_toBottomOf="@+id/minSpeed"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -21,9 +37,9 @@
         android:id="@+id/textMinSpeed"
         android:layout_width="0dp"
         android:layout_height="22dp"
-        android:layout_marginTop="43dp"
-        android:layout_marginEnd="173dp"
-        android:layout_marginBottom="40dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="171dp"
+        android:layout_marginBottom="28dp"
         android:text="Минимальная скорость"
         android:textColor="#FFFFFF"
         app:layout_constraintBottom_toTopOf="@+id/textMaxSpeed"
@@ -35,13 +51,11 @@
         android:id="@+id/textMaxSpeed"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="105dp"
-        android:layout_marginBottom="105dp"
         android:text="Максимальная скорость"
         android:textColor="#FFFFFF"
-        app:layout_constraintBottom_toTopOf="@+id/textDistanceTraveled"
+        app:layout_constraintBottom_toBottomOf="@+id/maxSpeed"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
+        app:layout_constraintTop_toTopOf="@+id/maxSpeed" />
 
     <TextView
         android:id="@+id/textNowSpeed"
@@ -57,30 +71,30 @@
         android:id="@+id/textDistanceTraveled"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="26dp"
         android:text="Пройденное расстояние"
         android:textColor="#FFFFFF"
-        app:layout_constraintBottom_toBottomOf="@+id/distanceTraveled"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/distanceTraveled" />
+        app:layout_constraintTop_toBottomOf="@+id/textNowSpeed" />
 
     <TextView
         android:id="@+id/minSpeed"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="44dp"
-        android:layout_marginEnd="13dp"
+        android:layout_width="64dp"
+        android:layout_height="30dp"
+        android:layout_marginEnd="12dp"
+        android:layout_marginBottom="289dp"
         android:text="0.00 км/ч"
         android:textColor="#FFFFFF"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textMinSpeed"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
+        app:layout_constraintStart_toEndOf="@+id/textMinSpeed" />
 
     <TextView
         android:id="@+id/maxSpeed"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="42dp"
-        android:layout_marginEnd="13dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="16dp"
         android:text="0.00 км/ч"
         android:textColor="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
@@ -91,7 +105,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="33dp"
-        android:layout_marginEnd="14dp"
+        android:layout_marginEnd="12dp"
         android:text="0.00 км/ч"
         android:textColor="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
@@ -101,11 +115,11 @@
         android:id="@+id/distanceTraveled"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="26dp"
-        android:layout_marginBottom="146dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="24dp"
         android:text="0.00 км"
         android:textColor="#FFFFFF"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/NowSpeed" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
