Теперь все норм

--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -11,7 +11,7 @@
         android:id="@+id/toolbar"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="65dp"
+        android:layout_marginBottom="24dp"
         android:background="#0000"
         android:elevation="4dp"
         android:minHeight="?attr/actionBarSize"
@@ -27,7 +27,7 @@
         android:id="@+id/typeOfWorklogin"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="11dp"
+        android:layout_marginBottom="12dp"
         app:errorEnabled="true"
         app:layout_constraintBottom_toTopOf="@+id/kilometrslogin"
         app:layout_constraintEnd_toEndOf="parent"
@@ -36,9 +36,9 @@
 
         <EditText
             android:id="@+id/typeOfWork"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
+            android:layout_marginStart="0dp"
             android:layout_marginTop="96dp"
             android:ems="10"
             android:hint="Вид работы"
@@ -53,7 +53,7 @@
         android:id="@+id/kilometrslogin"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="26dp"
+        android:layout_marginBottom="22dp"
         app:errorEnabled="true"
         app:layout_constraintBottom_toTopOf="@+id/dateOfStartlogin"
         app:layout_constraintEnd_toEndOf="parent"
@@ -62,9 +62,9 @@
 
         <EditText
             android:id="@+id/kilometrs"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
+            android:layout_marginStart="0dp"
             android:layout_marginBottom="19dp"
             android:ems="10"
             android:hint="Кол-во километров"
@@ -79,7 +79,7 @@
         android:id="@+id/dateOfStartlogin"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="46dp"
+        android:layout_marginBottom="23dp"
         app:errorEnabled="true"
         app:layout_constraintBottom_toTopOf="@+id/addWork"
         app:layout_constraintEnd_toEndOf="parent"
@@ -88,9 +88,9 @@
 
         <EditText
             android:id="@+id/dateOfStart"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
+            android:layout_marginStart="0dp"
             android:layout_marginBottom="39dp"
             android:ems="10"
             android:hint="Дата начала"
@@ -106,7 +106,7 @@
         android:id="@+id/addWork"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="21dp"
+        android:layout_marginBottom="20dp"
         android:background="#60000000"
         android:onClick="onClick"
         android:text="Добавить"
@@ -119,11 +119,9 @@
         android:id="@+id/listWork"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="3dp"
-        android:layout_marginEnd="3dp"
-        android:layout_marginBottom="1dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        style = "@style/CustomListView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/addWork" />
 
