--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,9 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name = "CustomListView" parent = "@android:style/Widget.ListView">
+        <item name = "android:background">#0000</item>
+        <item name = "android:fastScrollEnabled">true</item>
+    </style>
+
 </resources>
