Немного подправлены констрейны

--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -79,18 +79,21 @@
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/dateOfStartlogin"
-        android:layout_width="411dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="19dp"
+        android:hint="Дата начала"
         app:errorEnabled="true"
         app:layout_constraintBottom_toTopOf="@+id/minSpeed"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/kilometrslogin">
 
         <br.com.sapereaude.maskedEditText.MaskedEditText
             android:id="@+id/dateOfStart"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
+            android:layout_marginStart="0dp"
             android:layout_marginTop="12dp"
             android:ems="10"
             android:inputType="date"
@@ -108,38 +111,38 @@
         android:id="@+id/addWork"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="307dp"
+        android:layout_marginBottom="12dp"
         android:background="#60000000"
         android:onClick="onClick"
         android:text="Добавить"
+        app:layout_constraintBottom_toTopOf="@+id/listWork"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/minSpeed" />
 
     <ListView
         android:id="@+id/listWork"
         style="@style/CustomListView"
-        android:layout_width="403dp"
-        android:layout_height="253dp"
-        android:layout_marginBottom="1dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/addWork"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toBottomOf="@+id/addWork" />
 
     <EditText
         android:id="@+id/minSpeed"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="24dp"
+        android:layout_marginBottom="12dp"
         android:ems="10"
         android:hint="Минимальная скорость"
         android:inputType="numberDecimal"
         android:maxLength="3"
         android:textColor="#FFFFFF"
         app:layout_constraintBottom_toTopOf="@+id/addWork"
-        tools:layout_editor_absoluteX="8dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/dateOfStartlogin" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
